// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prompt building will build a basic prompt 1`] = `
"Bot's Persona: PERSONA
Scenario: SCENARIO

How Bot speaks: 
Bot: SAMPLE_CHAT
<START>
Bot: FIRST
You: SECOND
Bot:"
`;

exports[`Prompt building will build a continue prompt 1`] = `
"Bot's Persona: PERSONA
Scenario: SCENARIO

How Bot speaks: 
Bot: SAMPLE_CHAT
<START>
Bot: FIRST
You: SECOND
Bot: ORIGINAL
Bot:"
`;

exports[`Prompt building will exclude lowest priority memory to fit in budget 1`] = `
"Bot's Persona: PERSONA
Scenario: SCENARIO
Facts:
ENTRY TWO
ENTRY THREE

How Bot speaks: 
Bot: SAMPLE_CHAT
<START>
Bot: FIRST
You: 1-TRIGGER
You: 10-TRIGGER
You: 20-TRIGGER
Bot:"
`;

exports[`Prompt building will exclude matches that are not a whole word match 1`] = `
"Bot's Persona: PERSONA
Scenario: SCENARIO
Facts:
ENTRY ONE

How Bot speaks: 
Bot: SAMPLE_CHAT
<START>
Bot: LONGWOR A
You: 1-TRIGGER
Bot:"
`;

exports[`Prompt building will exclude memories triggered outside of memory depth 1`] = `
"Bot's Persona: PERSONA
Scenario: SCENARIO
Facts:
ENTRY TIE
ENTRY THREE

How Bot speaks: 
Bot: SAMPLE_CHAT
<START>
Bot: FIRST
You: 1-TRIGGER
You: TIE-TRIGGER
You: 20-TRIGGER
Bot:"
`;

exports[`Prompt building will exclude sample chat when gaslight contains sample chat placeholder 1`] = `
"Bot's Persona: PERSONA
Scenario: SCENARIO
This is how Bot should talk: 
Bot: SAMPLE_CHAT
Bot: FIRST
You: SECOND
Bot: ORIGINAL
Bot:"
`;

exports[`Prompt building will include example dialogue with omitted from template 1`] = `
"Bot's Persona: PERSONA
Scenario: SCENARIO
Facts:
ENTRY ONE
ENTRY TIE
ENTRY THREE

How Bot speaks: 
Bot: SAMPLE_CHAT
<START>
Bot: FIRST
You: 1-TRIGGER
You: TIE-TRIGGER
You: 20-TRIGGER
Bot:"
`;

exports[`Prompt building will include gaslight for non-turbo adapter 1`] = `
"GASLIGHT You
Scenario: SCENARIO
Bot's persona: PERSONA
How Bot speaks:
Bot: SAMPLE_CHAT
<START>
Bot: FIRST
You: 1-TRIGGER
You: TIE-TRIGGER
You: 20-TRIGGER
Bot:"
`;

exports[`Prompt building will include placeholders in the gaslight 1`] = `
"GASLIGHT
You
Bot
Facts:
ENTRY ONE
ENTRY TIE
ENTRY THREE
Scenario: SCENARIO
Bot's persona: PERSONA
How Bot speaks:
Bot: SAMPLE_CHAT
<START>
Bot: FIRST
You: 1-TRIGGER
You: TIE-TRIGGER
You: 20-TRIGGER
Bot:"
`;

exports[`Prompt building will include sample chat when gaslight does not sample chat placeholder 1`] = `
"Bot's Persona: PERSONA
Scenario: SCENARIO

How Bot speaks: 
Bot: SAMPLE_CHAT
<START>
Bot: FIRST
You: SECOND
Bot: ORIGINAL
Bot:"
`;

exports[`Prompt building will include ujb when omitted from gaslight 1`] = `
Object {
  "lines": Array [
    "Bot: bot response",
  ],
  "parts": Object {
    "allPersonas": Array [],
    "greeting": "GREETING",
    "memory": "",
    "persona": "PERSONA",
    "post": Array [
      "Bot:",
    ],
    "sampleChat": Array [
      "Bot: SAMPLE_CHAT",
    ],
    "scenario": "SCENARIO",
    "systemPrompt": "",
    "ujb": "",
  },
  "template": "GASLIGHT TEMPLATE
You
Bot
Auto-injected text:
Scenario: SCENARIO
Bot's persona: PERSONA
How Bot speaks:
Bot: SAMPLE_CHAT
<START>
Bot: bot response
Bot:",
}
`;

exports[`Prompt building will include will two memories by weight when triggered 1`] = `
"Bot's Persona: PERSONA
Scenario: SCENARIO
Facts:
ENTRY ONE
ENTRY TWO

How Bot speaks: 
Bot: SAMPLE_CHAT
<START>
Bot: FIRST
You: 10-TRIGGER
You: 1-TRIGGER
Bot:"
`;

exports[`Prompt building will not use the gaslight when set to false 1`] = `
"Bot's Persona: PERSONA
Scenario: SCENARIO
Facts:
ENTRY ONE
ENTRY TIE
ENTRY THREE

How Bot speaks: 
Bot: SAMPLE_CHAT
<START>
Bot: FIRST
You: 1-TRIGGER
You: TIE-TRIGGER
You: 20-TRIGGER
Bot:"
`;

exports[`Prompt building will omit sample chat when replyAs has no samplechat 1`] = `
"Reply's Persona: PERSONA
Scenario: MAIN Main

<START>

Reply:"
`;

exports[`Prompt building will order by trigger position when weight tie occurs 1`] = `
"Bot's Persona: PERSONA
Scenario: SCENARIO
Facts:
ENTRY ONE
ENTRY TIE
ENTRY THREE

How Bot speaks: 
Bot: SAMPLE_CHAT
<START>
Bot: FIRST
You: 1-TRIGGER
You: TIE-TRIGGER
You: 20-TRIGGER
Bot:"
`;

exports[`Prompt building will use correct placeholders in scenario and sample chat 1`] = `
"Reply's Persona: PERSONA
Scenario: MAIN Main

How Reply speaks: 
SAMPLECHAT Reply
<START>

Reply:"
`;
